# EDCC-Palmprint-Recognition

./: .travis.yml  CMakeLists.txt  README.md
include/: edcc.h  edcc_adapter.py
samples/cpp_sample/: batch_enhance_image.sh  config.json
samples/py_sample/: analyze_palmistry.py  api.py  api_pure_python.py  api_test.py  show_palmprint.py
source/include/core/: palmprintcode.h
source/include/util/: pub.h
source/src/api/: api.cc
source/src/core/: edccoding.cc  palmprint.cc  palmprintcode.cc
source/src/util/: pub.cc
test/source/src/: ft_edcc_base.cpp
